# cpp_inference_qnn_sdk

./: .gitignore  CMakeLists.txt  README.MD  convert_cifar10_to_images.py  export_cifar10_onnx.py  final_report.txt  layer_wise_report.txt  report.txt  report_100_images.txt
app/: main.cpp  profile_runner.cpp
inference_engine/Operators/include/: conv.h  relu.h  softmax.h
inference_engine/Operators/src/: conv.cpp  maxpool.cpp  relu.cpp  softmax.cpp
inference_engine/src/: config_engine.cpp
legacy_engine/Operators/include/: batchnorm.h  fc.h  maxpool.h
legacy_engine/Operators/src/: batchnorm.cpp  fc.cpp
models/compiled/: model.cpp
postprocessing/: postprocess.cpp  postprocess.h
preprocessing/: preprocess.cpp  preprocess.h
qnn/: opencv_engine.cpp  opencv_engine.h  qnn_engine.cpp  qnn_engine.h
utils/include/: profiler.h  utils.h
utils/src/: logger.cpp  utils.cpp
